INPUT element: Implicit form submission should reset setTextAsOfLastFormControlChangeEvent.

BUG=695349

Review-Url: https://codereview.chromium.org/2716773002
Cr-Commit-Position: refs/heads/master@{#452762}

Former-commit-id: 5add6ffa7fc5878720f4a561b6edc4cc49e08936