third_party/WebKit/Source/core/html/HTMLInputElement.cpp
@@ -1265,8 +1265,12 @@ void HTMLInputElement::defaultEventHandler(Event* evt) {
     HTMLFormElement* formForSubmission = m_inputTypeView->formForSubmission();
     // Form may never have been present, or may have been destroyed by code
     // responding to the change event.
-    if (formForSubmission)
+    if (formForSubmission) {
       formForSubmission->submitImplicitly(evt, canTriggerImplicitSubmission());
+      // We treat implicit submission is something like blur()-then-focus(). So
+      // we reset the last value. crbug.com/695349.
+      setTextAsOfLastFormControlChangeEvent(value());
+    }
 
     evt->setDefaultHandled();
     return;
